--- a/style.css
+++ b/style.css
@@ -1,289 +1,578 @@
+html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
 body {
-	font: 75%/150% "Trebuchet MS", Tahoma, Arial;
-	color: #333;
-	background: #E4EFF4;
-  background-image: url(/blog/wp-content/themes/encosia/images/main-bg.gif); 
-	margin: 0px;
-	padding: 0px 0px 40px;
-	line-height: 1.6em;
+  font: 75% / 150% "Trebuchet MS", Tahoma, Arial;
+  color: #333;
+  background: #E4EFF4 url(/blog/wp-content/themes/encosia/images/main-bg.gif);
+  margin: 0;
+  padding: 0 0 20px;
+  line-height: 1.7em;
 }
 
-html { overflow: -moz-scrollbars-vertical !important; }
-a {	color: #CC6600; }
-a:visited {	color: #CC6633; }
+a { color: #C60; }
+a:visited { color: #C63; }
 
-p {	padding: 0px 0px 15px; margin: 0px; }
+p { padding: 0 0 15px; margin: 0; }
 
 img { border: none; }
 
-h1 { margin: 0px; padding: 0px; }
+em { font-style: italic; }
+strong { font-weight: bold; }
+
+h1 { margin: 0; padding: 0; }
 
 h2 {
-	color: #000;
-	margin: 0px 0px 2px;
-	border-bottom: 1px solid #CCCCCC;
-	letter-spacing: -2px;
-	font-size: 180%;
-	font-weight: normal;
-	padding-bottom: 3px;
+  color: #000;
+  margin: 0 0 2px;
+  border-bottom: 1px solid #CCCCCC;
+  letter-spacing: -2px;
+  font-size: 180%;
+  font-weight: normal;
+  padding-bottom: 3px;
 }
-h2 a, h2 a:visited, h2 a:hover { color: #000; text-decoration: none; }
 
-h3 { font-size: 140%; color: #333; margin: 10px 0px 5px; }
-form { margin: 0px;	padding: 0px; }
-blockquote {
-	border-left: 5px solid #ccc;
-	color: #666666;
-	margin-left: 0;
-	margin-right: 15px;
-	margin-top: 0px;
-	padding-left: 10px;
-	font-style: italic;
-	font-size: 90%;
+h2 a, h2 a:visited, h2 a:hover {
+  color: #000;
+  text-decoration: none;
 }
-blockquote p { padding-bottom: 0px; }
+
+h3 {
+  font-size: 140%;
+  font-weight: bold;
+  color: #333;
+  margin: 10px 0 5px;
+}
+
+ol { margin-bottom: 20px; margin-left: 2em; }
+
+ol li {
+  list-style-type: decimal;
+  list-style-position: outside;
+}
+
+form { margin: 0; padding: 0; }
+
+#content blockquote {
+  border-left: 5px solid #ccc;
+  margin: 0 15px 10px 0;
+  padding-left: 10px;
+  font-style: italic;
+}
+
+#content blockquote p {
+  padding-bottom: 0;
+  margin-bottom: 10px;
+}
+
+#content blockquote strong { font-style: italic; font-weight: bold; }
+
 #page {
-	margin: 0px auto;
-	width: 876px;
-	height: 100%;
-	border-bottom: 5px solid #d5e6eb;
-	border-left: 5px solid #d5e6eb;
-	border-right: 5px solid #d5e6eb;
-	background: #FFF9D8 url(/blog/images/content-bg.gif) repeat-y;
+  margin: 0 auto;
+  width: 876px;
+  height: 100%;
+  border: 5px solid #d5e6eb;
+  border-top: none;
+  background: #FFF9D8 url(/blog/images/content-bg.gif) repeat-y;
 }
+
 #header {
-	background: #000000 url(/blog/images/banner-gradient.png) repeat-x;
-	height: 135px;
-	border-bottom: 1px solid #FFF2AD;
-	position: relative;
+  background: #111;
+  height: 130px;
+  border-bottom: 1px solid #FFF2AD;
+  position: relative;
 }
+
 #headerimg {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 371px;
-	height: 135px;
+  top: 15px;
+  left: 13px;
+  position: absolute;
 }
+
 #nav {
-	list-style: none;
-	margin: 0px;
-	position: absolute;
-	right: 10px;
-	bottom: 0px;
+  list-style: none;
+  margin: 0 0 2px 0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
-#nav a { float: left; margin-left: 5px; }
-#nav a, #nav a:visited{ color: #FFF; }
-#nav a:hover { color: #FFF9D8; }
-#nav a{
-	color: #ffffff;
-	padding: 0px 2px 10px 20px;
-	font-weight: bold;
-	font-size: 18px;
-	display: block;
-	text-align: center;
+
+#nav li {
+  float: left;
+  margin-left: 10px;
 }
+
+#nav a {
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  display: block;
+  font-weight: bold;
+  font-size: 20px;
+  margin: 0 10px 6px 10px;
+  padding: 0 0 1px 0;
+  text-align: center;
+  text-decoration: none;
+}
+
+#nav a:visited { color: #fff; }
+
+#nav a:hover {
+  border-bottom: 2px solid #fff;
+  color: #FFF9D8;
+  margin-bottom: 5px;
+}
+
 #content {
-	background: #FFFFFF;
-	padding: 10px 14px 30px 13px;
-	float: left;
-	width: 492px;
-	overflow: hidden;
+  background: #FFF;
+  padding: 9px 14px 30px 13px;
+  float: left;
+  width: 492px;
+  overflow: hidden;
 }
-.post {	clear:both;	padding-top: 10px; }
+
+.post {
+  clear: both;
+  padding-top: 10px;
+}
 
 .post-cat {
-	background: url(/blog/images/mini-category.gif) no-repeat left center;
-	padding-left: 20px;
-	float:left;
-	font-size: 95%;
-	color: #999999;
+  background: url(/blog/images/mini-category.gif) no-repeat left center;
+  padding-left: 20px;
+  float: left;
+  font-size: 95%;
+  color: #999999;
 }
 
-.post-calendar { float: right; color: #333; font-style: italic; }
+.post-calendar {
+  float: right;
+  color: #333;
+  font-style: italic;
+}
 
-.post-content {	clear: both; padding-top: 10px; text-align: justify; font-size: 110%; }
+.post-content {
+  clear: both;
+  padding-top: 10px;
+  font-size: 110%;
+}
 
-.more-link { float: right; margin-bottom: 7px; }
+.more-link {
+  float: right;
+  margin-bottom: 7px;
+}
 
 .post-cat a { text-decoration: none; }
 
 .post-content a:visited { color: #420; }
-.post-content h3 { border-bottom: 1px solid #CCC; padding-bottom: 3px; }
-.post-content ul { margin: 0px 25px 15px 25px; padding: 0; }
-.post-content li { margin: 0 0 5px 0; }
+
+.post-content h3 {
+  border-bottom: 1px solid #CCC;
+  padding-bottom: 3px;
+}
+
+.page-content ul, .post-content ul {
+  margin: 0 25px 15px 25px;
+  padding: 0;
+}
+
+.page-content li, .post-content li {
+  list-style-type: disc;
+  margin: 0 0 5px 0;
+}
+
 .post-content strong { color: #000; }
 
-.page-heading { 
-	float: left; 
-	width: 100%; 
-	border-bottom: 1px dotted #CCCCCC; 
-	padding-bottom: 3px;
-	margin: 0px 0px 2px; }
-	
+.page-heading {
+  float: left;
+  width: 100%;
+  border-bottom: 1px dotted #CCC;
+  padding-bottom: 3px;
+  margin: 0 0 2px;
+}
+
 .page-heading #title { float: left; }
-.page-heading #title h2 { border-bottom: none; padding: 0px; margin: 0px; }
 
-.page-heading #byline { float: right; line-height: 200%; }
+.page-heading #title h2 {
+  border-bottom: none;
+  padding: 0;
+  margin: 0;
+}
 
-.page-content {	clear: both; padding-top: 0px; text-align: justify;	font-size: 110%; }
-.page-content h3 { border-bottom: 1px solid #CCC; padding-bottom: 3px; }
-.page-content ul { margin: 0px 25px 15px 25px; padding: 0; }
-.page-content li { margin: 0 0 5px 0; }
+.page-heading #byline {
+  float: right;
+  line-height: 200%;
+}
+
+.page-content {
+  clear: both;
+  padding-top: 0;
+  font-size: 110%;
+}
+
+.page-content h3 {
+  border-bottom: 1px solid #CCC;
+  padding-bottom: 3px;
+}
+
 .page-content strong { color: #000; }
 
-.navigation { clear: both; padding: 10px 0px; }
+.aside {
+  background-color: #F0F9FF;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  left: -13px;
+  font-style: italic;
+  margin: 0 0 10px 0;
+  padding: 5px 0 0 13px;
+  position: relative;
+  width: 506px;
+}
+
+.aside strong {
+  font-size: 14px;
+}
+
+.navigation {
+  clear: both;
+  padding: 10px 0;
+}
+
 .navigation a, .navigation a:visited { color: #59770e; }
 
-#post-similarposts { float: left; width: 73%; }
+#post-similarposts {
+  float: left;
+  width: 73%;
+}
+
 #post-similarposts h3 { margin: 10px 0 0 0; }
-#post-similarposts ul { list-style: none; margin:0px; padding:0px; border-bottom: 1px solid #ccc; }
-#post-similarposts ul li{ margin: 0px; padding: 2px 0px 4px 7px; border-top: 1px solid #ccc; }
-#post-similarposts ul li a, .ul-archives li a:visited{ color: #495233; }
-#post-similarposts ul li a:hover{ color: #F60; }
 
-#post-kickthis { float: right; width: 25%; margin-bottom: 40px; }
-#post-kickthis h3 { margin: 10px 0 0 0; }
-#post-kickthis p { border-top: 1px solid #ccc; }
+#post-similarposts ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border-bottom: 1px solid #ccc;
+}
 
-#post-commentblock { float: left; width: 100%; }	
-#post-commentblock h3 { border-bottom: 1px solid #ccc; }
+#post-similarposts ul li {
+  margin: 0;
+  padding: 2px 0 4px 7px;
+  border-top: 1px solid #ccc;
+}
 
-#trackbacklist { margin-bottom: 10px; }
+#post-similarposts ul li a, .ul-archives li a:visited {
+  color: #495233;
+}
 
-#trackbacklist ol { margin: 0px; padding-left: 20px; }
-#trackbacklist li{ margin: 0px; padding: 2px 0px 2px 7px; }
+#post-similarposts ul li a:hover {
+  color: #F60;
+}
+
+#post-share {
+  float: right;
+  width: 25%;
+  margin-bottom: 40px;
+  text-align: center;
+}
+
+#post-share h3 {
+  border-bottom: 1px solid #ccc;
+  margin: 10px 0;
+}
+
+#post-share p { border-top: 1px solid #ccc; }
+
+#post-share-dnk { margin-bottom: 15px; }
+
+#post-share-twitter {
+  margin-bottom: 10px;
+  padding-left: 15px;
+}
+
+#post-commentblock {
+  float: left;
+  width: 100%;
+}
+
+#post-commentblock h3 {
+  border-bottom: 1px solid #ccc;
+}
+
+#trackbacklist li {
+  margin: 0;
+  padding: 2px 0 2px 7px;
+}
+
 #trackbacklist li a { color: #495233; }
 #trackbacklist li a:visited { color: #495233; }
 #trackbacklist a:hover { color: #F60; }
 
-#comment-guide { clear: both; float: left; width: 100%; }
-#comment-guide p { text-align: justify; }
+#comment-guide {
+  clear: both;
+  float: left;
+  width: 100%;
+}
+
 #comment-guide h3 { border-bottom: 1px solid #ccc; }
 
 .post-comments {
-	background: url(/blog/images/mini-comments.gif) no-repeat left center;
-	padding-left: 20px;
-	float: right;
-	font-size: 95%;
+  background: url(/blog/images/mini-comments.gif) no-repeat left center;
+  padding-left: 20px;
+  float: right;
+  font-size: 95%;
 }
 
 #commentlist a { text-decoration: none; }
-
 #commentform { margin-top: 10px; }
-#commentform p { margin: 0px; }
-#commentform label{	color: #787878;	font-size: 87%; }
+#commentform p { margin: 0; }
 
-.commentTitle { float: left; }
-.commentTimestamp { float: right; font-style: italic; font-size: 90%; }
-.commentBody { clear: both; padding-top: 5px; border-top: 1px solid #DDD; }	
+#commentform label { color: #787878; }
 
-#author {	background-image: url(/blog/images/name-icon.gif); }
-#email { background-image: url(/blog/images/mail-icon.gif); }
-#url { background-image: url(/blog/images/link-icon.gif); }
+#subscriptionMessage { color: #333 !important; }
 
+.comment-header {
+  overflow: hidden;
+  border-bottom: 1px solid #ddd;
+}
+
+.comment-gravatar { float: left; }
+
+.comment-author { float: left; }
+
+.comment-date { float: right; }
+
+.comment-content {
+  clear: both;
+  float: left;
+  margin-top: 10px;
+  width: 100%;
+}
+
+.comment p {
+  clear: both;
+  padding-top: 5px;
+}
+
+.comment {
+  clear: both;
+  position: relative;
+  margin: 10px 0 0 0;
+  border: 1px solid #ddd;
+  overflow: hidden;
+  padding: 4px;
+  background-color: #fff;
+}
+
+.commentlist .odd { background-color: #f8f8f8; }
+
+.comment .comment img { margin: 0; }
+
+.comment-edit-link {
+  margin: 5px;
+  float: right;
+}
+
+.comment-reply-link {
+  margin: 5px;
+  float: right;
+}
+
+.subscribe-to-comments {
+  float: right;
+}
+
+.comment .body .content {
+  padding: 0 3px 0 3px;
+  width: 100%;
+  overflow: auto;
+}
+
+.comment .title abbr { border: none; }
+
+.collapsed .body, .collapsed .comment { display: none; }
+
+/*
+#addcomment small, #addcomment div { padding: 3px; }
+*/
 #author, #email, #url {
-	background-color: #F0F9FF;
-	background-position: left center;
-	background-repeat: no-repeat;
-	border: 1px solid #CCC;
-	margin-top: 3px;
-	padding-left: 20px;
-	width: 50%;
+  background-color: #F0F9FF;
+  border: 1px solid #CCC;
+  margin-top: 3px;
+  padding: 3px;
+  width: 50%;
 }
 
-#commentform textarea{
-	width: 93%;
-	background-color: #F0F9FF;
-	border: 1px solid #ccc;
-	padding-left: 20px;
-	margin-top: 3px;
+#commentform textarea {
+  width: 98%;
+  background-color: #F0F9FF;
+  border: 1px solid #ccc;
+  padding: 3px;
+  margin-top: 3px;
 }
 
-#addcommentbutton{
-	width:150px;  
-	padding:5px; 
-	margin: 5px 0px 4px 0pt;
-	font-size:0.8em;
-	background:url(/blog/images/button-bg.gif) repeat-x; 
-	border:1px solid #adadad!important;
-	border-left-color:#ececec!important; 
-	border-top-color:#ececec!important;
-	font: bold 12px Arial, Helvetica, sans-serif;
-	cursor: pointer;
+#addComment {
+  width: 150px;
+  padding: 5px;
+  margin: 5px 0 4px 0;
+  background: url(/blog/images/button-bg.gif) repeat-x;
+  border: 1px solid #adadad !important;
+  border-left-color: #ececec !important;
+  border-top-color: #ececec !important;
+  font: bold 12px Arial, Helvetica, sans-serif;
+  cursor: pointer;
 }
 
-#sidebar { background: #FFF9D8;	float: right; padding: 0px 10px 20px 10px; width: 336px; height: 100%; }
-#sidebar h3 { 
-	font-size: 140%; 
-	color: #333; 
-	margin: 10px 0px 0px;
-	text-indent: -9999px;
-	height: 30px;
-	width: 336px;
-	background-image: url(/blog/images/sidebar-headings.png)
+#sidebar {
+  background: #FFF9D8;
+  float: right;
+  padding: 0 10px 20px 10px;
+  width: 336px;
+  height: 100%;
 }
 
-#SearchBlock { margin-top: 10px; float: left; width: 336px; }
+#sidebar h3 {
+  font-size: 140%;
+  color: #333;
+  text-indent: -9999px;
+  margin: 0;
+  height: 30px;
+  width: 336px;
+  background-image: url(http://i.encosia.com/blog/images/sidebar-headings.png)
+}
 
-#s { width: 75%; font-size: 16px; float: left; }
-#searchsubmit { width: 20%; font-size: 15px; float: right; }
+#sidebar blockquote {
+  background: url('/blog/images/twitter-quote-dark.png') no-repeat;
+  color: #fff;
+  float: left;
+  font-weight: bold;
+  font-size: 110%;
+  font-style: italic;
+  height: 63px;
+  margin-top: -15px;
+  overflow: hidden;
+  padding: 18px 16px 8px 12px;
+  width: 310px;
+}
 
-#RSSBlock { position: absolute;	right: 10px; top: 10px; }
+#sidebar blockquote a {
+  color: #ccc;
+}
 
-#RSSBlock img {	margin-left: 10px; border: none; }
+#SearchBlock {
+  margin-top: 10px;
+  float: left;
+  width: 336px;
+}
 
-.sidebarBox { float: left; width: 336px; }
+#s {
+  height: 30px;
+  width: 246px;
+  letter-spacing: 1px;
+  font-size: 20px;
+  padding: 0 5px;
+  float: left;
+}
+
+#searchsubmit {
+  width: 72px;
+  height: 32px;
+  font-size: 16px;
+  float: right;
+}
+
+#RSSBlock {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+
+#RSSBlock img {
+  margin-left: 10px;
+  border: none;
+}
+
+#RSS, #Twitter {
+  border: 1px solid #bbb;
+  float: left;
+  padding: 5px;
+  width: 324px;
+}
+
+#RSS .connectLink, #Twitter .connectLink {
+  font-size: 140%;
+  color: #333;
+  margin-left: 10px;
+}
+
+#RSS div {
+  position: relative;
+  height: 38px;
+  margin-bottom: 5px;
+}
+
+#RSS div:last-child { margin-bottom: 0; }
+
+.sidebarBox {
+  background: #f0f9ff url(/blog/images/sidebar-ul-background.png) repeat-x;
+  float: left;
+  margin-top: 15px;
+  width: 336px;
+}
+
+#adzerk {
+  border: 1px solid #bbb;
+  padding: 5px;
+  width: 324px !important;
+}
+
+#adzerk_ad_div p {
+  float: right;
+  margin-top: -3px;
+  width: 200px;
+}
+
+#adzerk_ad_div a { float: left; }
+
+#adzerk_by {
+  clear: right;
+  float: right;
+  padding: 0;
+}
 
 #MostPopular { background-position: 0 -5px; }
-#Sponsor { background-position: 0 -75px; }
+
 #SimilarPosts { background-position: 0 -40px; }
-#Categories { background-position: 0 -145px; }
-#Blogroll { background-position: 0 -110px; }
 
-.mediumRectangle { float: left; width: 300px; height: 250px; }
-
-#sidebar ul { 
-	list-style: none; 
-	margin:0px; 
-	padding:0px; 
-	border: 1px solid #bbb; 
-	border-top: none;
-	background-color: #f0f9ff;
-	background-image: url(/blog/images/sidebar-ul-background.png);
-	background-repeat: repeat-x;
+#sidebar ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 1px solid #bbb;
+  border-top: none;
 }
 
-#sidebar blockquote { margin-bottom: 0px; margin-top: 2px; }
+#sidebar ul li:first-child { border-top: 0; }
 
-#sidebar ul li:first-child { border-top: 0px; }
+#sidebar ul li {
+  margin: 0;
+  padding: 2px 0 4px 6px;
+  border-top: 1px solid #ccc;
+}
 
-#sidebar ul li{ margin: 0px; padding: 2px 0px 4px 6px; border-top: 1px solid #ccc; }
-#sidebar ul li a, .ul-archives li a:visited{ color: #220; }
-#sidebar ul li a:hover{ color: #F60; }
+#sidebar ul li a, .ul-archives li a:visited { color: #220; }
+#sidebar ul li a:hover { color: #F60; }
 
-#footer {	clear: both; }
-
-.wp_syntax { 
+.wp_syntax {
   color: #100;
-  background-color: #E4EFF4;
-  border: 1px solid #D5E6EB;
+  background-color: #f0f9ff;
+  border: 1px solid #bbb;
   margin: 0 0 1.5em 0;
   overflow: auto;
 }
 
-/* IE FIX */
-.wp_syntax { 
-  overflow-x: auto;
-  overflow-y: hidden;
-  padding-bottom: expression(this.scrollWidth > this.offsetWidth ? 15 : 0);
-	clear: both;
-}
-
 .wp_syntax table { border-collapse: collapse; }
 
-.wp_syntax div, .wp_syntax td { vertical-align: top; padding: 2px 4px; }
+.wp_syntax div, .wp_syntax td {
+  vertical-align: top;
+  padding: 2px 4px;
+}
 
-/* potential overrides for other styles */
 .wp_syntax pre {
   margin: 0;
   width: auto;
@@ -292,77 +581,52 @@ blockquote p { padding-bottom: 0px; }
   overflow: visible;
 }
 
-.code { font-family:'Courier New',Courier,monospace; font-size: 12px; }
-
-.pagebar
-{
-   padding: 0.2em 0.5em;
-   margin-right: 0.1em;
-   border: 1px solid #fff;
-   background: #fff;
-   text-decoration: none;
+.code {
+  font-family: Consolas, 'Courier New', Courier, monospace;
+  font-size: 12px;
 }
 
-.pagebar a, .pageList .this-page
-{
-   border: 1px solid #D5E6EB;
-   text-decoration: none;
-   padding: 0.2em 0.5em;
+.pagebar {
+  padding: 2px 0;
+  margin-right: 0.1em;
+  text-align: center;
+  text-decoration: none;
 }
 
-.pagebar a:visited { text-decoration: none; padding: 0.2em 0.5em; }
-.pagebar .break { padding: 2px 6px; border: none; background: #fff; text-decoration: none; }
+.pagebar a, .pagebar .this-page {
+  border: 1px solid #D5E6EB;
+  margin-left: 4px;
+  padding: 2px 5px;  
+  text-decoration: none;
+}
+
+.pagebar a:visited {
+  text-decoration: none;
+  padding: 0.2em 0.5em;
+}
+
+.pagebar .break {
+  padding: 2px 6px;
+  border: none;
+  background: #fff;
+  text-decoration: none;
+}
+
 .pagebar .this-page {
-   border: 1px solid #D5E6EB;
-   padding: 0.2em 0.5em;
-   font-weight: bold;
-   background: #ECFDCE;
-   color: #669517;
-}
-.comment 
-{
-	position: 				relative;
-	margin:					0px;
-/*	border: 				1px solid #666; */
-	padding:				4px;
-	background-color:		#fff;
+  border: 1px solid #D5E6EB;
+  font-weight: bold;
+  background: #ECFDCE;
+  color: #669517;
 }
 
-.odd { background-color: #f8f8f8; }
-
-.comment div { position: relative; }
-
-.comment .comment img { margin: 0px; }
-
-.comment .collapseicon 
-{
-	width: 					13px;
-	height: 				13px;
-	overflow:				hidden;
-	background-image: 		url(/blog/images/subthread-open.png);
+#footer {
+  background: #222;
+  clear: both;
+  padding: 14px;
 }
 
-.collapsed .collapseicon 
-{
-	background-image: 		url(/blog/images/subthread.png);
+#footer h3 {
+  color: #eee;
+  margin: 0;
+  text-align: center;
 }
-
-
-.comment .reply {
-	text-align: 			right;
-	font-size: 				80%;
-	padding: 				0px 6px 6px 0px;
-}
-
-.comment { border: 1px solid #ddd; margin-top: 10px; }
-
-input#subscribe { width: auto; }
-
-.comment .body .content { padding: 0px 3px 0px 3px;	width: 100%; overflow: auto; }
-
-.comment .title abbr { border: none; }
-
-.collapsed .body, .collapsed .comment { display: none; }
-/*
-#addcomment small, #addcomment div { padding: 3px; }
-*/
