--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}
+
 body {
   font: 75% / 150% "Trebuchet MS", Tahoma, Arial;
   color: #333;
@@ -30,10 +31,10 @@ h2 {
   padding-bottom: 3px;
 }
 
-h2 a, h2 a:visited, h2 a:hover {
-  color: #000;
-  text-decoration: none;
-}
+  h2 a, h2 a:visited, h2 a:hover {
+    color: #000;
+    text-decoration: none;
+  }
 
 h3 {
   font-size: 140%;
@@ -44,12 +45,19 @@ h3 {
 
 ol { margin-bottom: 20px; margin-left: 2em; }
 
-ol li {
-  list-style-type: decimal;
-  list-style-position: outside;
-}
+  ol li {
+    list-style-type: decimal;
+    list-style-position: outside;
+  }
 
 form { margin: 0; padding: 0; }
+
+code {
+  background-color: #eee;
+  font-family: courier, monospace;
+  font-size: 100%;
+  padding: 2px;
+}
 
 #content blockquote {
   border-left: 5px solid #ccc;
@@ -58,12 +66,12 @@ form { margin: 0; padding: 0; }
   font-style: italic;
 }
 
-#content blockquote p {
-  padding-bottom: 0;
-  margin-bottom: 10px;
-}
+  #content blockquote p {
+    padding-bottom: 0;
+    margin-bottom: 10px;
+  }
 
-#content blockquote strong { font-style: italic; font-weight: bold; }
+  #content blockquote strong { font-style: italic; font-weight: bold; }
 
 #page {
   margin: 0 auto;
@@ -81,44 +89,44 @@ form { margin: 0; padding: 0; }
   position: relative;
 }
 
-#headerimg {
-  top: 15px;
-  left: 13px;
-  position: absolute;
-}
+  #headerimg {
+    top: 15px;
+    left: 13px;
+    position: absolute;
+  }
 
-#nav {
-  list-style: none;
-  margin: 0 0 2px 0;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
+  #nav {
+    list-style: none;
+    margin: 0 0 2px 0;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
 
-#nav li {
-  float: left;
-  margin-left: 10px;
-}
+    #nav li {
+      float: left;
+      margin-left: 10px;
+    }
 
-#nav a {
-  color: #fff;
-  border-bottom: 1px solid #fff;
-  display: block;
-  font-weight: bold;
-  font-size: 20px;
-  margin: 0 10px 6px 10px;
-  padding: 0 0 1px 0;
-  text-align: center;
-  text-decoration: none;
-}
+    #nav a {
+      color: #fff;
+      border-bottom: 1px solid #fff;
+      display: block;
+      font-weight: bold;
+      font-size: 20px;
+      margin: 0 10px 6px 10px;
+      padding: 0 0 1px 0;
+      text-align: center;
+      text-decoration: none;
+    }
 
-#nav a:visited { color: #fff; }
+    #nav a:visited { color: #fff; }
 
-#nav a:hover {
-  border-bottom: 2px solid #fff;
-  color: #FFF9D8;
-  margin-bottom: 5px;
-}
+    #nav a:hover {
+      border-bottom: 2px solid #fff;
+      color: #FFF9D8;
+      margin-bottom: 5px;
+    }
 
 #content {
   background: #FFF;
@@ -165,6 +173,14 @@ form { margin: 0; padding: 0; }
 .post-content h3 {
   border-bottom: 1px solid #CCC;
   padding-bottom: 3px;
+}
+
+.post-content h4 {
+  border-bottom: 1px solid #ddd;
+  color: #000;
+  font-size: 120%;
+  font-style: italic;
+  margin-bottom: 4px;
 }
 
 .page-content ul, .post-content ul {
@@ -238,7 +254,7 @@ form { margin: 0; padding: 0; }
 
 #post-similarposts {
   float: left;
-  width: 73%;
+  width: 395px;
 }
 
 #post-similarposts h3 { margin: 10px 0 0 0; }
@@ -266,9 +282,39 @@ form { margin: 0; padding: 0; }
 
 #post-share {
   float: right;
-  width: 25%;
-  margin-bottom: 40px;
+  width: 85px;
   text-align: center;
+}
+
+.attachment .entry-attachment {
+  text-align: center;
+}
+
+.attachment .entry-attachment img {
+  border: 1px solid #999;
+}
+
+.attachment .entry-caption {
+  text-align: center;
+  font-style: italic;
+  margin-top: 2px;
+}
+
+.attachment #post-share {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  float: left;
+  width: 492px;
+  height: 32px;
+  padding: 8px 0;
+}
+
+.attachment #facebook-like {
+  float: left;
+}
+
+.attachment #twitter-share {
+  float: left;
 }
 
 #post-share h3 {
@@ -278,12 +324,18 @@ form { margin: 0; padding: 0; }
 
 #post-share p { border-top: 1px solid #ccc; }
 
-#post-share-dnk { margin-bottom: 15px; }
-
 #post-share-twitter {
   margin-bottom: 10px;
-  padding-left: 15px;
 }
+
+.delic-tall { margin: 10px auto; }
+
+#post-share-facebook {
+  width: 60px;
+  margin: 0 auto;
+}
+
+.fb_share_count_wrapper { float: none !important; }
 
 #post-commentblock {
   float: left;
@@ -307,6 +359,7 @@ form { margin: 0; padding: 0; }
   clear: both;
   float: left;
   width: 100%;
+  margin-top: 10px;
 }
 
 #comment-guide h3 { border-bottom: 1px solid #ccc; }
@@ -596,7 +649,7 @@ form { margin: 0; padding: 0; }
 .pagebar a, .pagebar .this-page {
   border: 1px solid #D5E6EB;
   margin-left: 4px;
-  padding: 2px 5px;  
+  padding: 2px 5px;
   text-decoration: none;
 }
 
