--- a/style.css
+++ b/style.css
@@ -54,9 +54,10 @@ form { margin: 0; padding: 0; }
 
 code {
   background-color: #eee;
+  border: 1px solid #ccc;
   font-family: courier, monospace;
   font-size: 100%;
-  padding: 2px;
+  padding: 1px;
 }
 
 #content blockquote {
@@ -499,8 +500,8 @@ code {
   height: 63px;
   margin-top: -15px;
   overflow: hidden;
-  padding: 18px 16px 8px 12px;
-  width: 310px;
+  padding: 18px 16px 8px 8px;
+  width: 320px;
 }
 
 #sidebar blockquote a {
@@ -529,6 +530,23 @@ code {
   float: right;
 }
 
+#sidebar #About {
+  background: #0a0a0a url(/blog/images/me-sidebar-blank.jpg) !important;
+  border: 1px solid #666;
+  color: #eee;
+  height: 173px;
+  overflow: hidden;
+  width: 334px;
+}
+
+#sidebar #About p {
+  float: left;
+  margin: 5px 0 5px 5px;
+  padding-bottom: 0;
+  width: 175px;
+  line-height: 18px;
+  font-size: 14px;
+}
 #RSSBlock {
   position: absolute;
   right: 10px;
@@ -568,24 +586,25 @@ code {
   width: 336px;
 }
 
-#adzerk {
-  border: 1px solid #bbb;
-  padding: 5px;
-  width: 324px !important;
+#lqdmad {
+  min-height: 100px;
+  text-align: left;
+  float: left;
+  margin-top: 15px;
+  width: 336px;
+}
+#lqdmad p {
+  padding: 6px 0;
 }
 
-#adzerk_ad_div p {
-  float: right;
-  margin-top: -3px;
-  width: 200px;
+#lqdmad .dmAdImg, #lqdmad iframe {
+  margin: 2px 10px 7px 0;
+  float: left;
+  border: 1px solid #CCC;
 }
-
-#adzerk_ad_div a { float: left; }
-
-#adzerk_by {
-  clear: right;
-  float: right;
-  padding: 0;
+#lqdmad .dmAdText {
+  margin: 0;
+  padding-right: 6px;
 }
 
 #MostPopular { background-position: 0 -5px; }
