--- a/style.css
+++ b/style.css
@@ -114,8 +114,10 @@ code {
       color: #fff;
       border-bottom: 1px solid #fff;
       display: block;
+      font-family: "myriad-pro-condensed", sans-serif;
       font-weight: bold;
-      font-size: 20px;
+      font-size: 28px;
+      letter-spacing: 1px;
       margin: 0 10px 6px 10px;
       padding: 0 0 1px 0;
       text-align: center;
@@ -585,7 +587,7 @@ code {
   background: linear-gradient(to bottom,  #7d7e7d 0%,#0e0e0e 100%); /* W3C */
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 ); /* IE6-8 */
   font-family: "myriad-pro-condensed", sans-serif;
-  font-size: 24px;
+  font-size: 22px;
   color: #fff;
   letter-spacing: 1px;
   line-height: 30px;
@@ -593,24 +595,6 @@ code {
   padding-left: 6px;
   height: 30px;
   width: 330px;
-}
-
-#sidebar blockquote {
-  background: url('/blog/images/twitter-quote-dark.png') no-repeat;
-  color: #fff;
-  float: left;
-  font-weight: bold;
-  font-size: 110%;
-  font-style: italic;
-  height: 63px;
-  margin-top: -15px;
-  overflow: hidden;
-  padding: 18px 16px 8px 8px;
-  width: 320px;
-}
-
-#sidebar blockquote a {
-  color: #ccc;
 }
 
 #SearchBlock {
