Load Typekit fonts asynchronously.
git-svn-id: https://encosia.svn.beanstalkapp.com/encosia-wordpress-theme/trunk@39 8e589f58-77db-384f-abea-3c4620f7eb80

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@ h3 {
   margin: 10px 0 5px;
 }
 
+.wf-loading h2, .wf-loading h3, .wf-loading h4, .wf-loading #nav {
+  visibility: hidden;
+}
+
 ol { margin-bottom: 20px; margin-left: 2em; }
 
   ol li {
