Syntax that may or may not matter.

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h2 {
   }
 
 h3 {
-  font-family: "myriad-pro-condensed", "sans-serif";
+  font-family: "myriad-pro-condensed", sans-serif;
   font-size: 22px;
   font-weight: 600;
   color: #333;
