More celebration of LESS
Mostly just to test regenerating the file via Grunt watch.

--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -634,19 +634,19 @@ code {
   height: 173px;
   overflow: hidden;
   width: 334px;
-}
 
-#sidebar #About p {
-  float: left;
-  margin: 5px 0 5px 5px;
-  padding-bottom: 0;
-  width: 175px;
-  line-height: 18px;
-  font-size: 14px;
-}
+  p {
+    float: left;
+    margin: 5px 0 5px 5px;
+    padding-bottom: 0;
+    width: 175px;
+    line-height: 18px;
+    font-size: 14px;
+  }
 
-#sidebar #About a {
-  color: #eee;
+  a {
+    color: #eee;
+  }
 }
 
 #carbonads-container {
