Pointless changes to test updated grunt watch config.

--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -664,11 +664,11 @@ div.carbonad {
   position: absolute;
   right: 10px;
   top: 10px;
-}
 
-#RSSBlock img {
-  margin-left: 10px;
-  border: none;
+  img {
+    margin-left: 10px;
+    border: none;
+  }
 }
 
 #RSS, #Twitter {
