--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -751,21 +751,21 @@ div.carbonad {
   border: 1px solid #bbb;
   margin: 0 0 1.5em 0;
   overflow: auto;
-}
 
-.wp_syntax table { border-collapse: collapse; }
+  table { border-collapse: collapse; }
 
-.wp_syntax div, .wp_syntax td {
-  vertical-align: top;
-  padding: 2px 4px;
-}
+  div, td {
+    vertical-align: top;
+    padding: 2px 4px;
+  }
 
-.wp_syntax pre {
-  margin: 0;
-  width: auto;
-  float: none;
-  clear: none;
-  overflow: visible;
+  pre {
+    margin: 0;
+    width: auto;
+    float: none;
+    clear: none;
+    overflow: visible;
+  }
 }
 
 .code {
@@ -778,44 +778,44 @@ div.carbonad {
   margin-right: 0.1em;
   text-align: center;
   text-decoration: none;
-}
 
-.pagebar a, .pagebar .this-page {
-  border: 1px solid #D5E6EB;
-  margin-left: 4px;
-  padding: 2px 5px;
-  text-decoration: none;
-}
+  a, .this-page {
+    border: 1px solid #D5E6EB;
+    margin-left: 4px;
+    padding: 2px 5px;
+    text-decoration: none;
+  }
 
-.pagebar a:visited {
-  text-decoration: none;
-  padding: 0.2em 0.5em;
-}
+  a:visited {
+    text-decoration: none;
+    padding: 0.2em 0.5em;
+  }
 
-.pagebar .break {
-  padding: 2px 6px;
-  border: none;
-  background: #fff;
-  text-decoration: none;
-}
+  .break {
+    padding: 2px 6px;
+    border: none;
+    background: #fff;
+    text-decoration: none;
+  }
 
-.pagebar .this-page {
-  border: 1px solid #D5E6EB;
-  font-weight: bold;
-  background: #ECFDCE;
-  color: #669517;
+  .this-page {
+    border: 1px solid #D5E6EB;
+    font-weight: bold;
+    background: #ECFDCE;
+    color: #669517;
+  }
 }
 
 #footer {
   background: #222;
   clear: both;
   padding: 14px;
-}
 
-#footer h3 {
-  color: #eee;
-  margin: 0;
-  text-align: center;
+  h3 {
+    color: #eee;
+    margin: 0;
+    text-align: center;
+  }
 }
 
 /*
