Moved attachment page styling to a separate file.

--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -357,71 +357,7 @@ code {
   text-align: center;
 }
 
-.attachment .entry-attachment {
-  text-align: center;
-}
-
-.attachment .entry-attachment img {
-  border: 1px solid #999;
-}
-
-.attachment .entry-caption {
-  text-align: center;
-  font-style: italic;
-  margin-top: 2px;
-}
-
-.attachment #post-share {
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  float: left;
-  width: 492px;
-  height: 32px;
-  padding: 8px 0;
-  margin-bottom: 10px;
-}
-
-.attachment #facebook-like {
-  float: left;
-}
-
-.attachment #twitter-share {
-  float: left;
-}
-
-.attachment .previous-image img, .attachment .next-image img {
-  border: 1px solid #777;
-}
-
-.attachment .previous-image {
-  float: left;
-}
-
-  .attachment .previous-image a {
-    float: left;
-    clear: both;
-  }
-
-  .attachment .previous-image-link {
-    clear: both;
-    float: left;
-    margin-bottom: 5px;
-  }
-
-.attachment .next-image {
-  float: right;
-}
-
-  .attachment .next-image a {
-    float: right;
-    clear: both;
-  }
-
-  .attachment .next-image-link {
-    clear: both;
-    float: right;
-    margin-bottom: 5px;
-  }
+@import "attachment";
 
 #post-share h3 {
   border-bottom: 1px solid #ccc;
