Adds CSS for new YARPP output and dequeues YARPP's CSS include.

--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -326,29 +326,25 @@ code {
 #post-similarposts {
   float: left;
   width: 395px;
-}
 
-#post-similarposts h3 { margin: 10px 0 0 0; }
+  h3 { margin: 10px 0 0 0; }
 
-#post-similarposts ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  border-bottom: 1px solid #ccc;
-}
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #ccc;
 
-#post-similarposts ul li {
-  margin: 0;
-  padding: 2px 0 4px 7px;
-  border-top: 1px solid #ccc;
-}
+    li {
+      margin: 0;
+      padding: 2px 0 4px 0;
+      border-top: 1px solid #ccc;
 
-#post-similarposts ul li a, .ul-archives li a:visited {
-  color: #495233;
-}
+      a, a:visited { color: #495233; }
 
-#post-similarposts ul li a:hover {
-  color: #F60;
+      a:hover { color: #F60; }
+    }
+  }
 }
 
 #post-share {
