Styling changes to use the new Google Fonts at larger sizing.

--- a/css/src/comments.less
+++ b/css/src/comments.less
@@ -5,16 +5,22 @@
   h3 {
     border-bottom: 1px solid #ccc;
   }
-}
 
-#trackbacklist li {
-  margin: 0;
-  padding: 2px 0 2px 7px;
-}
+  ol {
+    font-size: 13px;
+    margin: 0 0 0 34px;
+    padding: 0;
 
-#trackbacklist li a { color: #495233; }
-#trackbacklist li a:visited { color: #495233; }
-#trackbacklist a:hover { color: #F60; }
+    li {
+      margin: 0;
+      padding: 2px 0 2px 7px;
+
+      a { color: #495233; }
+      a:visited { color: #495233; }
+      a:hover { color: #F60; }
+    }
+  }
+}
 
 #comment-guide {
   float: left;
@@ -33,10 +39,12 @@
 
 #commentlist a { text-decoration: none; }
 
-#commentform { margin-top: 10px; }
-#commentform p { margin: 0; }
+#commentform {
+  margin-top: 10px;
 
-#commentform label { color: #787878; }
+  p { margin: 0; }
+  label { color: #787878; }
+}
 
 #subscriptionMessage { color: #333 !important; }
 
