--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -9,7 +9,7 @@ body {
   color: #333;
   background: #E4EFF4 url(/blog/wp-content/themes/encosia/images/main-bg.gif);
   margin: 0;
-  padding: 0 0 20px;
+  padding: 0;
 }
 
 a { color: #C60; }
@@ -66,167 +66,10 @@ code {
   padding: 1px;
 }
 
-#content blockquote {
-  border-left: 5px solid #ccc;
-  margin: 0 15px 10px 0;
-  padding-left: 10px;
-  font-style: italic;
-
-  p {
-    padding-bottom: 0;
-    margin-bottom: 10px;
-  }
-
-  strong {
-    font-style: italic;
-    font-weight: bold;
-  }
-}
-
 #page {
   margin: 0 auto;
-  width: 876px;
-  height: 100%;
-  border: 5px solid #d5e6eb;
-  border-top: none;
+  width: 100%;
   background: #FFF9D8;
-}
-
-#header {
-  background: #111;
-  height: 130px;
-  border-bottom: 1px solid #FFF2AD;
-  position: relative;
-}
-
-  #headerimg {
-    top: 15px;
-    left: 13px;
-    position: absolute;
-  }
-
-  #nav {
-    list-style: none;
-    margin: 0 0 2px 0;
-    position: absolute;
-    right: 0;
-    bottom: 0;
-
-    li {
-      float: left;
-      margin-left: 10px;
-    }
-
-    a {
-      color: #fff;
-      border-bottom: 1px solid #fff;
-      display: block;
-      font-weight: bold;
-      font-size: 28px;
-      letter-spacing: 1px;
-      margin: 0 10px 6px 10px;
-      padding: 0 0 2px 0;
-      text-align: center;
-      text-decoration: none;
-    }
-
-    a:visited { color: #fff; }
-
-    a:hover {
-      border-bottom: 2px solid #fff;
-      color: #FFF9D8;
-      margin-bottom: 5px;
-    }
-  }
-
-#content {
-  background: #FFF;
-  padding: 9px 14px 30px 13px;
-  float: left;
-  width: 492px;
-  overflow: hidden;
-}
-
-.content {
-  clear: both;
-  padding-top: 10px;
-
-  h4 {
-    border-bottom: 1px solid #ddd;
-    color: #333;
-    font-size: 20px;
-    font-style: italic;
-    font-weight: 400;
-    letter-spacing: 1px;
-    line-height: 18px;
-    margin-bottom: 4px;
-  }
-
-  ul {
-    margin: 0 25px 15px 25px;
-    padding: 0;
-  }
-
-  li {
-    list-style-type: disc;
-    margin: 0 0 5px 0;
-  }
-
-  a:visited {
-    color: #420;
-  }
-
-  h3 {
-    border-bottom: 1px solid #CCC;
-  }
-
-  strong {
-    color: #000;
-  }
-
-  img.full-width, img.size-full {
-    border: 1px solid #ccc;
-  }
-
-  img.alignleft {
-    float: left;
-    margin-right: 10px;
-  }
-
-  img.alignright {
-    float: right;
-    margin-left: 10px;
-  }
-
-  .wp-caption img {
-    border: none;
-    padding: 0;
-  }
-
-  .wp-caption {
-    border: 1px solid #ccc;
-    background-color: #eee;
-    text-align: center;
-    margin-bottom: 10px;
-    width: auto !important;
-  }
-
-  .wp-caption.alignleft {
-    float: left;
-    margin-right: 10px;
-  }
-
-  .wp-caption.alignright {
-    float: right;
-    margin-left: 10px;
-  }
-
-  .wp-caption p {
-    text-align: center;
-    font-style: italic;
-    margin: 0 5px 5px 5px;
-    padding: 0;
-  }
 }
 
 .post {
@@ -234,13 +77,7 @@ code {
   padding-top: 10px;
 }
 
-.post-cat {
-  background: url(/blog/images/mini-category.gif) no-repeat left center;
-  padding-left: 20px;
-  float: left;
-  font-size: 12px;
-  color: #999999;
-}
+.post-cat { display: none; }
 
 .post-calendar {
   float: right;
@@ -260,14 +97,40 @@ code {
   clear: both;
   padding-top: 0;
 
-  .page-content h3 {
+  h3 {
     border-bottom: 1px solid #CCC;
   }
 
-  .page-content strong {
+  strong {
     color: #000;
   }
+
+  img {
+    max-width: 40%;
+    height: auto;
+  }
 }
+
+@media only screen and (min-width: 768px) {
+  #page {
+    width: 876px;
+    border: 5px solid #d5e6eb;
+    border-top: none;
+
+    .post-cat {
+      background: url(/blog/images/mini-category.gif) no-repeat left center;
+      display: inline;
+      padding-left: 20px;
+      float: left;
+      font-size: 12px;
+      color: #999999;
+    }
+  }
+}
+
+@import "header";
+
+@import "content";
 
 /* Contact form styling */
 .wpcf7 input, .wpcf7 textarea {
@@ -279,38 +142,18 @@ code {
   width: 100%;
 }
 
-.aside {
-  background-color: #F0F9FF;
-  border-top: 1px solid #ccc;
-  border-bottom: 1px solid #ccc;
-  left: -13px;
-  font-style: italic;
-  margin: 0 0 10px 0;
-  padding: 5px 0 0 13px;
-  position: relative;
-  width: 506px;
-}
-
-.aside.alert {
-  background-color: #FFF9D8;
-}
-
-.aside strong {
-  font-size: 14px;
-}
-
+// Pagebar (bottom of index)
 .navigation {
   clear: both;
   padding: 10px 0;
 }
 
-.navigation a, .navigation a:visited { color: #59770e; }
-
 #post-similarposts {
   float: left;
-  width: 395px;
 
-  h3 { margin: 10px 0 0 0; }
+  h3 {
+    margin: 10px 0 0 0;
+  }
 
   ul {
     list-style: none;
@@ -324,39 +167,55 @@ code {
       margin: 0;
       padding: 2px 0 4px 0;
 
-      a, a:visited { color: #495233; }
+      a, a:visited {
+        color: #495233;
+      }
 
-      a:hover { color: #F60; }
+      a:hover {
+        color: #F60;
+      }
     }
   }
 }
 
-#post-share {
-  float: right;
-  width: 85px;
-  text-align: center;
-
-  h3 {
-    border-bottom: 1px solid #ccc;
-    margin: 10px 0;
-  }
-
-  p { border-top: 1px solid #ccc; }
-
-  #post-share-twitter {
-    margin-bottom: 10px;
-  }
-
-  #post-share-facebook {
-    width: 60px;
-    margin: 0 auto;
+@media only screen and (min-width: 768px) {
+  #post-similarposts {
+    width: 395px;
   }
 }
 
+// Hide the desktop sharing stuff by default and only show it at 768px.
+#post-share { display: none; }
+
+@media only screen and (min-width: 768px) {
+  #post-share {
+    float: right;
+    width: 85px;
+    text-align: center;
+
+    h3 {
+      border-bottom: 1px solid #ccc;
+      margin: 10px 0;
+    }
+
+    p {
+      border-top: 1px solid #ccc;
+    }
+
+    #post-share-twitter {
+      margin-bottom: 10px;
+    }
+
+    #post-share-facebook {
+      width: 60px;
+      margin: 0 auto;
+    }
+  }
+
+  .fb_share_count_wrapper { float: none !important; }
+}
+
 @import "attachment";
-
-
-.fb_share_count_wrapper { float: none !important; }
 
 @import "comments";
 
@@ -389,6 +248,8 @@ code {
   font-family: Consolas, 'Courier New', Courier, monospace;
   font-size: 12px;
 }
+
+.navigation a, .navigation a:visited { color: #59770e; }
 
 .pagebar {
   padding: 2px 0;
