--- a/css/src/styles.less
+++ b/css/src/styles.less
@@ -189,6 +189,7 @@ code {
 
 @media only screen and (min-width: 768px) {
   #post-share {
+    display: block;
     float: right;
     width: 85px;
     text-align: center;
