Improves add-comment button styling and fixes tab order in comment form.

--- a/css/src/comments.less
+++ b/css/src/comments.less
@@ -122,14 +122,11 @@
   width: ~"calc(100% - 12px)";
 }
 
-#addComment, .generalButton {
+.btn, .generalButton {
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   width: 100%;
-  padding: 5px;
+  padding: 10px;
   margin: 5px 0 4px 0;
-  background: url(/blog/images/button-bg.gif) repeat-x;
-  border: 1px solid #adadad !important;
-  border-left-color: #ececec !important;
-  border-top-color: #ececec !important;
-  font: bold 12px Arial, Helvetica, sans-serif;
+  font: 18px Arial, Helvetica, sans-serif;
   cursor: pointer;
 }
