Progress indication and button disabling while submitting comments.

--- a/less/comments.less
+++ b/less/comments.less
@@ -126,7 +126,19 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
   width: 100%;
   padding: 10px;
+  position: relative;
   margin: 5px 0 4px 0;
   font: 18px Arial, Helvetica, sans-serif;
   cursor: pointer;
+
+  .spinner {
+    left: 290px;
+    font-size: 10px;
+    height: 30px;
+    position: absolute;
+    opacity: 0.75;
+    text-align: center;
+    top: 5px;
+    width: 50px;
+  }
 }
