Makes comment from input text darker.

--- a/less/comments.less
+++ b/less/comments.less
@@ -115,6 +115,7 @@
 #author, #email, #url, #commentform textarea {
   background-color: #F0F9FF;
   border: 1px solid #CCC;
+  color: #333;
   font-family: inherit;
   font-size: 14px;
   margin-top: 3px;
