Tones down the social link hover effect and adds email subscription to the links.

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -199,7 +199,8 @@
     a {
       color: #fff;
       display: block;
-      font-size: 20px;
+      font-family: arial, helvetica, sans-serif;
+      font-size: 18px;
       height: 50px;
       padding-left: 65px;
       position: relative;
@@ -246,6 +247,12 @@
       background-color: darken(#DF4B38, 15);
 
       i { background-position: 0 -258px; }
+    }
+
+    .social-email {
+      background-color: darken(#93C6E5, 15);
+
+      i { background-position: 0 -387px; }
     }
   }
 }
