--- a/less/effects.less
+++ b/less/effects.less
@@ -1,22 +1,18 @@
 // From Ian Lunn's Hover library: https://github.com/IanLunn/Hover
-.hvr-grow {
+.hvr-grow i {
   display: inline-block;
   vertical-align: middle;
-  -webkit-transform: translateZ(0);
   transform: translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
+  transition-duration: 0.2s;
+  transition-property: transform, box-shadow;
 }
 
-.hvr-grow:hover, .hvr-grow:focus, .hvr-grow:active {
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+.hvr-grow:hover i {
+  transform: scale(1.2);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 1);
   z-index: 1000;
 }
 
