Attempting to sidestep uBlock...

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -219,7 +219,7 @@
       }
     }
 
-    .social-twitter {
+    .social-tw {
       background-color: darken(#29A9E1, 15);
 
       i { background-position: 0 -1px; }
@@ -231,7 +231,7 @@
       i { background-position: 0 -129px; }
     }
 
-    .social-facebook {
+    .social-fb {
       background-color: darken(#3B5A9A, 15);
 
       i { background-position: 0 -65px; }
@@ -243,7 +243,7 @@
       i { background-position: 0 -194px; }
     }
 
-    .social-gplus {
+    .social-gp {
       background-color: darken(#DF4B38, 15);
 
       i { background-position: 0 -258px; }
