Improves alignleft/right image presentation at narrow widths.

--- a/less/content.less
+++ b/less/content.less
@@ -73,12 +73,14 @@
     float: left;
     margin-right: 10px;
     width: auto;
+    max-width: 50%;
   }
 
   img.alignright {
     float: right;
     margin-left: 10px;
     width: auto;
+    max-width: 50%;
   }
 
   .wp-caption img {
