Uses CSS transitions instead of JavaScript for header shrink/grow.

--- a/less/styles.less
+++ b/less/styles.less
@@ -117,7 +117,12 @@ code {
     width: 876px;
     border: 5px solid #d5e6eb;
     border-top: none;
-    padding-top: 130px;
+    padding-top: 0;
+
+    .padding-top {
+      background-color: #111;
+      height: 130px;
+    }
 
     .post-cat {
       background: url(/blog/images/mini-category.gif) no-repeat left center;
