--- a/less/header.less
+++ b/less/header.less
@@ -22,11 +22,18 @@ nav { display: none; }
   .header-container {
     height: 130px;
     text-align: left;
+    transition: height 0.2s;
 
     header {
       margin: 0 auto;
+      height: 100%;
       position: relative;
       width: 876px;
+
+      > a {
+        height: 100%;
+        display: inline-block;
+      }
     }
 
     h1 {
@@ -34,17 +41,21 @@ nav { display: none; }
     }
 
     img {
+      max-height: 75%;
       height: auto;
+      //margin: 14px 0 0 8px;
       padding: 0;
-      margin-left: 7px;
-      margin-top: 14px;
+      position: absolute;
+      bottom: 18px;
+      left: 8px;
+      transition: height 0.2s, width 0.2s, bottom 0.2s;
     }
 
     nav {
       display: block;
       position: absolute;
-      right: 0;
-      bottom: 0;
+      right: 10px;
+      bottom: 6px;
 
       a {
         color: #fff;
@@ -53,8 +64,8 @@ nav { display: none; }
         font-weight: bold;
         font-size: 28px;
         letter-spacing: 1px;
-        margin: 0 0 6px 20px;
-        padding: 0 0 2px 0;
+        margin: 0 0 9px 20px;
+        padding: 0;
         text-align: center;
         text-decoration: none;
       }
@@ -66,6 +77,18 @@ nav { display: none; }
         color: #FFF9D8;
         margin-bottom: 5px;
       }
+    }
+  }
+
+  .header-container.collapsed {
+    height: 60px;
+    transition: height 1s ease;
+
+    img {
+      bottom: 8px;
+      transition: height 0.75s ease,
+                  width 0.75s ease,
+                  bottom 0.75s ease;
     }
   }
 }
