Hide crayon's line numbers without waiting on its JavaScript to run.

--- a/less/styles.less
+++ b/less/styles.less
@@ -229,6 +229,8 @@ code {
 
 @import "sidebar";
 
+.crayon-nums { display: none; }
+
 .code {
   font-family: Consolas, 'Courier New', Courier, monospace;
   font-size: 12px;
