Tweaks crayon styling.

--- a/less/styles.less
+++ b/less/styles.less
@@ -229,6 +229,13 @@ code {
 
 @import "sidebar";
 
+div.crayon-syntax {
+  font-size: 13px;
+  margin-left: -11px;
+  padding-left: 2px;
+  width: 514px;
+}
+
 .crayon-nums { display: none; }
 
 .code {
