Updates page background and border to remove background image and be more neutral.

--- a/less/styles.less
+++ b/less/styles.less
@@ -7,7 +7,7 @@ body {
   font-size: 15px;
   line-height: 1.8em;
   color: #000;
-  background: #E4EFF4 url(/blog/wp-content/themes/encosia/images/main-bg.gif);
+  background: #EEE;
   margin: 0;
   padding: 0;
 }
@@ -115,7 +115,7 @@ code {
 @media only screen and (min-width: 768px) {
   #page {
     width: 876px;
-    border: 5px solid #d5e6eb;
+    border: 2px solid #CCC;
     border-top: none;
     padding-top: 0;
 
