Adds padding to the top of the page and around the h2 title.

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -6,7 +6,7 @@
     display: block;
     float: right;
     font-family: @heading-font;
-    padding: 0 10px 20px 10px;
+    padding: 7px 10px 20px 10px;
     width: 336px;
 
     h3 {
