Improves the padding-top div to use background colors that match the content underneath.

--- a/less/styles.less
+++ b/less/styles.less
@@ -120,8 +120,19 @@ code {
     padding-top: 0;
 
     .padding-top {
-      background-color: #111;
       height: 130px;
+
+      .padding-top-content {
+        background-color: #fff;
+        height: 100%;
+        width: 512px;
+      }
+
+      .padding-top-sidebar {
+        background-color: #111;
+        height: 100%;
+        width: 356px;
+      }
     }
 
     .post-cat {
