Updates to Carbon Ad styling.

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -95,12 +95,39 @@
   #carbonads-container {
     float: left;
     margin-top: 15px;
-    margin-left: -1px;
+    margin-bottom: 6px;
   }
 
-  div.carbonad {
-    border-width: 1px !important;
-    width: 336px !important;
+  #carbonads {
+    width: 318px !important;
+    border: 1px solid #29a9e1 !important;
+    background: #f6fbfe;
+    overflow: hidden;
+    position: relative;
+    padding: 8px;
+  }
+
+  .carbon-img {
+    float: left;
+    margin-bottom: -4px;
+  }
+
+  .carbon-text {
+    width: 160px !important;
+    float: left;
+    padding-left: 15px;
+  }
+
+  .carbon-poweredby {
+    position: absolute;
+    bottom: 10px;
+    left: 153px;
+  }
+
+  #carbonads a {
+    color: #29a9e1 !important;
+    font: 12px/1.4 Verdana, "Helvetica Neue", Helvetica, sans-serif !important;
+    text-decoration: none;
   }
 
   #MostPopular {
