Fixes stupid green link in paging.

--- a/less/styles.less
+++ b/less/styles.less
@@ -255,7 +255,7 @@ div.crayon-syntax {
   font-size: 12px;
 }
 
-.navigation a, .navigation a:visited { color: #59770e; }
+.navigation a, .navigation a:visited { color: #bababa; }
 
 .pagebar {
   padding: 2px 0;
