Fixes incorrect nesting in the #About CSS from before moving to LESS

--- a/less/sidebar.less
+++ b/less/sidebar.less
@@ -70,7 +70,7 @@
     float: right;
   }
 
-  #sidebar #About {
+  #About {
     background: #0a0a0a url(/blog/images/me-sidebar-blank.jpg) !important;
     border: 1px solid #666;
     color: #eee;
