Fixes Crayon toolbar icons

--- a/less/styles.less
+++ b/less/styles.less
@@ -253,6 +253,10 @@ div.crayon-syntax {
 
 .crayon-nums { display: none; }
 
+.crayon-syntax .crayon-toolbar .crayon-button {
+  height: 20px;
+}
+
 .code {
   font-family: Consolas, 'Courier New', Courier, monospace;
   font-size: 12px;
